--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "nodemon": "^3.1.9"
+  },
+  "scripts":{
+    "start":"node index.js",
+    "dev":"nodemon index.js"
   }
 }
